# sort-alg-test-framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Python Analysis/: cs3851_chudyj_lab4.html  cs3851_chudyj_lab4.ipynb
doc/: AlgStats_8hpp_source.html  Sorting_8hpp_source.html  TesterFramework_8hpp_source.html  annotated.html  classAbstractSort-members.html  classAbstractSort.html  classAbstractSort__inherit__graph.dot  classAbstractSort__inherit__graph.md5  classAlgStats-members.html  classAlgStats.html  classInsertSort-members.html  classInsertSort.html  classInsertSort__coll__graph.dot  classInsertSort__coll__graph.md5  classInsertSort__inherit__graph.dot  classInsertSort__inherit__graph.md5  classMergeSort-members.html  classMergeSort.html  classMergeSort__coll__graph.dot  classMergeSort__coll__graph.md5  classMergeSort__inherit__graph.dot  classMergeSort__inherit__graph.md5  classMtMergeSort-members.html  classMtMergeSort.html  classMtMergeSort__coll__graph.dot  classMtMergeSort__coll__graph.md5  classMtMergeSort__inherit__graph.dot  classMtMergeSort__inherit__graph.md5  classMtQuickSort-members.html  classMtQuickSort.html  classMtQuickSort__coll__graph.dot  classMtQuickSort__coll__graph.md5  classMtQuickSort__inherit__graph.dot  classMtQuickSort__inherit__graph.md5  classQuickSort-members.html  classQuickSort.html  classQuickSort__coll__graph.dot  classQuickSort__coll__graph.md5  classQuickSort__inherit__graph.dot  classQuickSort__inherit__graph.md5  (+23 more)
output-data/: insert,merge,quick.csv  mergemultithread.csv  quickmergemultithread.csv  quickmultithread.csv  (+2 more)
(+31 files in other folders)
